// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoryCard Renders correctly when successRateDiff is negative 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main repositoryCard buildStatus"
  >
    <p
      class="StyledProps--font Text--lineclamp StyledProps--main title StyledProps--color StyledProps--color-black"
      style="--text-line-clamp: 1;"
    >
      Pipeline 1
    </p>
    <div
      class="StyledProps--font StyledProps--main mainContent"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main cardStats"
        >
          <p
            class="StyledProps--font StyledProps--main statHeader StyledProps--font-size-small"
          >
            BUILDS
          </p>
          <p
            class="StyledProps--font StyledProps--main statHeader StyledProps--font-size-small"
          >
            PIPELINE.DASHBOARDS.SUCCESSRATE
          </p>
          <p
            class="StyledProps--font StyledProps--main statContent"
          >
            30
          </p>
          <div
            class="StyledProps--font StyledProps--main statWrap"
          >
            <p
              class="StyledProps--font StyledProps--main statContent"
            >
              60
              %
            </p>
            <span
              class="bp3-icon bp3-icon-caret-down StyledProps--main"
              icon="caret-down"
            >
              <svg
                data-icon="caret-down"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  caret-down
                </desc>
                <path
                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main rateDiffValue"
            >
              5
              %
            </p>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main chartWrapper StyledProps--margin-left-medium"
        style="height: 40px;"
      >
        <div />
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main cardFooter"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main avatarWrapper"
      >
        <div
          class="wrapper"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="userLabel userLabel"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey900"
                  data-icon="nav-user-profile"
                >
                  <svg
                    height="18"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.5 2C5.701 2 1 6.701 1 12.5S5.701 23 11.5 23 22 18.299 22 12.5 17.299 2 11.5 2zm0 3.151a3.152 3.152 0 11-3.152 3.152A3.144 3.144 0 0111.5 5.151zm0 14.936a7.558 7.558 0 01-6.296-3.383c0-2.09 4.197-3.233 6.296-3.233s6.266 1.142 6.296 3.233a7.558 7.558 0 01-6.296 3.354z"
                      fill="#747d88"
                    />
                  </svg>
                </span>
                <div
                  class="userDetails"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-tiny"
                    style="--text-line-clamp: 1;"
                  >
                    John Doe
                  </p>
                </div>
              </div>
            </span>
          </span>
        </div>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main message StyledProps--font-variation-tiny"
          style="--text-line-clamp: 2;"
        >
          This is message
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main times StyledProps--flex StyledProps--flex-justifyContent-end"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex"
        >
          <span
            class="bp3-icon bp3-icon-calendar StyledProps--main StyledProps--color StyledProps--color-grey900"
            icon="calendar"
          >
            <svg
              data-icon="calendar"
              height="10"
              viewBox="0 0 16 16"
              width="10"
            >
              <desc>
                calendar
              </desc>
              <path
                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-tiny"
            style="--text-line-clamp: 1;"
          >
            SOME_FIXED_TIME
          </p>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex"
        >
          <span
            class="bp3-icon bp3-icon-time StyledProps--main StyledProps--color StyledProps--color-grey900"
            icon="time"
          >
            <svg
              data-icon="time"
              height="10"
              viewBox="0 0 16 16"
              width="10"
            >
              <desc>
                time
              </desc>
              <path
                d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny"
          >
            60m
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RepositoryCard Renders correctly when successRateDiff is positive 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main repositoryCard buildStatus"
  >
    <p
      class="StyledProps--font Text--lineclamp StyledProps--main title StyledProps--color StyledProps--color-black"
      style="--text-line-clamp: 1;"
    >
      Pipeline 1
    </p>
    <div
      class="StyledProps--font StyledProps--main mainContent"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main cardStats"
        >
          <p
            class="StyledProps--font StyledProps--main statHeader StyledProps--font-size-small"
          >
            BUILDS
          </p>
          <p
            class="StyledProps--font StyledProps--main statHeader StyledProps--font-size-small"
          >
            PIPELINE.DASHBOARDS.SUCCESSRATE
          </p>
          <p
            class="StyledProps--font StyledProps--main statContent"
          >
            30
          </p>
          <div
            class="StyledProps--font StyledProps--main statWrap"
          >
            <p
              class="StyledProps--font StyledProps--main statContent"
            >
              60
              %
            </p>
            <span
              class="bp3-icon bp3-icon-caret-up StyledProps--main"
              icon="caret-up"
            >
              <svg
                data-icon="caret-up"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  caret-up
                </desc>
                <path
                  d="M11.87 9.17s.01 0 0 0l-3.5-4C8.28 5.07 8.15 5 8 5s-.28.07-.37.17l-3.5 4a.495.495 0 00.37.83h7a.495.495 0 00.37-.83z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main rateDiffValue"
            >
              10
              %
            </p>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main chartWrapper StyledProps--margin-left-medium"
        style="height: 40px;"
      >
        <div />
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main cardFooter"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main avatarWrapper"
      >
        <div
          class="wrapper"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="userLabel userLabel"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey900"
                  data-icon="nav-user-profile"
                >
                  <svg
                    height="18"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.5 2C5.701 2 1 6.701 1 12.5S5.701 23 11.5 23 22 18.299 22 12.5 17.299 2 11.5 2zm0 3.151a3.152 3.152 0 11-3.152 3.152A3.144 3.144 0 0111.5 5.151zm0 14.936a7.558 7.558 0 01-6.296-3.383c0-2.09 4.197-3.233 6.296-3.233s6.266 1.142 6.296 3.233a7.558 7.558 0 01-6.296 3.354z"
                      fill="#747d88"
                    />
                  </svg>
                </span>
                <div
                  class="userDetails"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-tiny"
                    style="--text-line-clamp: 1;"
                  >
                    John Doe
                  </p>
                </div>
              </div>
            </span>
          </span>
        </div>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main message StyledProps--font-variation-tiny"
          style="--text-line-clamp: 2;"
        >
          This is message
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main times StyledProps--flex StyledProps--flex-justifyContent-end"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex"
        >
          <span
            class="bp3-icon bp3-icon-calendar StyledProps--main StyledProps--color StyledProps--color-grey900"
            icon="calendar"
          >
            <svg
              data-icon="calendar"
              height="10"
              viewBox="0 0 16 16"
              width="10"
            >
              <desc>
                calendar
              </desc>
              <path
                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-tiny"
            style="--text-line-clamp: 1;"
          >
            SOME_FIXED_TIME
          </p>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex"
        >
          <span
            class="bp3-icon bp3-icon-time StyledProps--main StyledProps--color StyledProps--color-grey900"
            icon="time"
          >
            <svg
              data-icon="time"
              height="10"
              viewBox="0 0 16 16"
              width="10"
            >
              <desc>
                time
              </desc>
              <path
                d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny"
          >
            60m
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
